--- a/GoodExchangeApplication/MyRazorPage/Pages/CustomerHistory/TransactionHistory.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/CustomerHistory/TransactionHistory.cshtml
@@ -159,6 +159,8 @@
     </style>
 </head>
 <body>
+    <div>
+        <a asp-page="/CustomerHistory/UserProfile" class="btn btn-primary">Back To User Profile</a>
     <div class="container">
         <h1>Transaction History</h1>
         <table>
@@ -224,7 +226,7 @@
             }
         </div>
     </div>
-    </div>
+</div>
 
     <!-- Modal -->
     <div id="cancelModal" class="modal">
