--- a/GoodExchangeApplication/MyRazorPage/Pages/Index.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Index.cshtml
@@ -117,9 +117,9 @@
                         </div>
                     </div>
                     
-                    <div class="ms-1">
+                    @* <div class="ms-1">
                         <a asp-page="/Seller/PostManagement" class="btn btn-outline-success me-2">Manage Post</a>
-                    </div>
+                    </div> *@
                     <a class="nav-icon d-none d-lg-inline" href="#" data-bs-toggle="modal" data-bs-target="#templatemo_search">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                             <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
@@ -251,8 +251,8 @@
             <div class="col-lg-6 m-auto">
                 <h1 class="h1">Categories of The Month</h1>
                 <p>
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                    deserunt mollit anim id est laborum.
+                    @* Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                    deserunt mollit anim id est laborum. *@
                 </p>
             </div>
         </div>
@@ -292,7 +292,7 @@
                     <div class="col-12 col-md-4 mb-4">
                         <div class="card h-100">
                             <a href="#">
-                                <img src="images/feature_prod_01.jpg" class="card-img-top" alt="@top.Title">
+                                <img src="@top.Image" class="card-img-top" alt="@top.Title">
                             </a>
                             <div class="card-body">
                                 <ul class="list-unstyled d-flex justify-content-between">
