--- a/GoodExchangeApplication/MyRazorPage/Pages/Post.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Post.cshtml
@@ -170,7 +170,7 @@
 
 
 
-    <!-- Start Banner Hero -->
+@*     <!-- Start Banner Hero -->
     <div id="template-mo-zay-hero-carousel" class="carousel slide" data-bs-ride="carousel">
         <ol class="carousel-indicators">
             <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="0" class="active"></li>
@@ -250,7 +250,7 @@
             </svg>
         </a>
     </div>
-    <!-- End Banner Hero -->
+    <!-- End Banner Hero --> *@
 
     <div class="container mt-5">
         <h2 class="mb-4">Posts</h2>
