--- a/GoodExchangeApplication/MyRazorPage/Pages/Homepage/ProductList.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Homepage/ProductList.cshtml
@@ -139,7 +139,7 @@
                         </div>
                         <div class="details">
                             <div class="name">@product.Title</div>
-                            <div class="price">@product.Price</div>
+                            <div class="price"> $ @product.Price</div>
                         </div>
                     </div>
                 }
