--- a/GoodExchangeApplication/MyRazorPage/Pages/AddToCart.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/AddToCart.cshtml
@@ -72,7 +72,7 @@
                     <div class="card-body">
                         <p><strong>Picking shipping delivery</strong></p>
                         <div class="form-group">
-                            <label for="transactionType"><strong>Transaction Type</strong></label>
+                            <label for="transactionType"><strong>Shipping Type</strong></label>
                             <select class="form-select" id="transactionType" name="txtTransactionTypeId" required>
                                 @foreach (var i in Model.TransactionTypeDTOs)
                                 {
